--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -11,13 +11,13 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        swift-version: [ '5.5', '5.6', '5.7' ]
+        swift-version: [ '5.6', '5.7', '5.8' ]
     steps:
       - name: Check out repository
         uses: actions/checkout@v3
 
       - name: Set up Swift
-        uses: fwal/setup-swift@v1
+        uses: apple-actions/setup-swift@v1
         with:
           swift-version: ${{ matrix.swift-version }}
 
