--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -17,7 +17,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Set up Swift ${{ matrix.swift-version }}
-        uses: fwal/setup-swift@v1
+        uses: swift-actions/setup-swift@v2
         with:
           swift-version: ${{ matrix.swift-version }}
 
