--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        swift-version: [ '5.5', '5.6', '5.7' ]
+        swift-version: [ '6.0' ]
     steps:
       - name: Check out repository
         uses: actions/checkout@v3
